tests/ui/associated-type-bounds/return-type-notation/not-a-method.stderr
error[E0575]: expected function, found function `function`
  --> $DIR/not-a-method.rs:8:5
   |
LL |     function(..): Send,
   |     ^^^^^^^^^^^^ not a function

error[E0573]: expected type, found function `function`
  --> $DIR/not-a-method.rs:16:5
   |
LL |     function(): Send,
   |     ^^^^^^^^^^ not a type

error[E0576]: cannot find function `method` in this scope
  --> $DIR/not-a-method.rs:28:5
   |
LL |     method(..): Send,
   |     ^^^^^^ not found in this scope

error[E0412]: cannot find type `method` in this scope
  --> $DIR/not-a-method.rs:37:5
   |
LL |     method(): Send,
   |     ^^^^^^ not found in this scope

warning: the feature `return_type_notation` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/not-a-method.rs:1:12
   |
LL | #![feature(return_type_notation)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: return type notation not allowed in this position yet
  --> $DIR/not-a-method.rs:8:5
   |
LL |     function(..): Send,
   |     ^^^^^^^^^^^^

error: return type notation not allowed in this position yet
  --> $DIR/not-a-method.rs:28:5
   |
LL |     method(..): Send,
   |     ^^^^^^^^^^

error: aborting due to 6 previous errors; 1 warning emitted

Some errors have detailed explanations: E0412, E0573, E0575, E0576.
For more information about an error, try `rustc --explain E0412`.
